--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 <div class="bottom">
   <a class="footer-link" href="https://www.linkedin.com/in/chueyeelor">LinkedIn</a>
   <a class="footer-link" href="https://github.com/Blue-Boi">Github</a>
+  <a class="footer-link" href="https://blue-boi.github.io/Bootstrap-Project/">Bootstrap Project</a>
   <p class="copyright">© 2020 Chueyee Lor.</p>
 </div>
 
